# kwalletmanager

./: .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  CTestConfig.cmake  Mainpage.dox  Makefile.am  Messages.sh  TODO  allyourbase.cpp  allyourbase.h  kbetterthankdialogbase.cpp  kbetterthankdialogbase.h  kbetterthankdialogbase.ui  kbetterthankdialogbase.ui.h  kwalleteditor.cpp  kwalleteditor.h  kwalleteditor.rc  kwalletmanager-kwalletd.desktop  kwalletmanager.cpp  kwalletmanager.desktop  kwalletmanager.h  kwalletmanager.rc  kwalletmanager5-kwalletd.desktop  kwalletmanager5.desktop  kwalletpopup.cpp  kwalletpopup.h  kwmapeditor.cpp  kwmapeditor.h  main.cpp  org.kde.kwalletmanager.desktop  org.kde.kwalletmanager5.appdata.xml  org.kde.kwalletmanager5.desktop  walletwidget.ui
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt  Makefile.am
konfigurator/: CMakeLists.txt  Makefile.am  Messages.sh  konfigurator.cpp  konfigurator.h  kwallet_config.desktop  kwalletconfig.desktop  kwalletmanager_show.desktop  walletconfigwidget.ui
po/ar/: kcmkwallet.po  kwalletmanager.po
po/ast/: kcmkwallet.po  kwalletmanager.po
po/az/: kcmkwallet.po  kwalletmanager.po
po/be/: kcmkwallet.po  kwalletmanager.po
po/bg/: kcmkwallet.po  kwalletmanager.po
po/br/: kcmkwallet.po  kwalletmanager.po
po/bs/: kcmkwallet.po  kwalletmanager.po
po/ca/: kcmkwallet.po  kwalletmanager.po
po/ca/docs/kwallet5/: index.docbook
po/ca/docs/kwalletmanager/: index.docbook
po/ca@valencia/: kcmkwallet.po  kwalletmanager.po
po/cs/: kcmkwallet.po  kwalletmanager.po
po/cy/: kcmkwallet.po  kwalletmanager.po
po/da/: kcmkwallet.po  kwalletmanager.po
po/de/: kcmkwallet.po  kwalletmanager.po
po/de/docs/kwallet5/: index.docbook
po/el/: kcmkwallet.po  kwalletmanager.po
po/en_GB/: kcmkwallet.po  kwalletmanager.po
po/eo/: kcmkwallet.po  kwalletmanager.po
po/es/: kcmkwallet.po  kwalletmanager.po
po/es/docs/kwalletmanager/: index.docbook
po/et/: kcmkwallet.po  kwalletmanager.po
po/eu/: kcmkwallet.po  kwalletmanager.po
po/fa/: kcmkwallet.po  kwalletmanager.po
po/fi/: kcmkwallet.po  kwalletmanager.po
po/fr/: kcmkwallet.po  kwalletmanager.po
po/fr/docs/kwalletmanager/: index.docbook
po/ga/: kcmkwallet.po  kwalletmanager.po
po/gl/: kcmkwallet.po  kwalletmanager.po
po/he/: kcmkwallet.po  kwalletmanager.po
po/hi/: kcmkwallet.po  kwalletmanager.po
po/hne/: kcmkwallet.po  kwalletmanager.po
po/hr/: kcmkwallet.po  kwalletmanager.po
po/hu/: kcmkwallet.po  kwalletmanager.po
po/ia/: kcmkwallet.po  kwalletmanager.po
po/id/: kcmkwallet.po  kwalletmanager.po
po/ie/: kcmkwallet.po  kwalletmanager.po
po/is/: kcmkwallet.po  kwalletmanager.po
po/it/: kcmkwallet.po  kwalletmanager.po
po/it/docs/kwallet5/: index.docbook
po/ja/: kcmkwallet.po  kwalletmanager.po
po/ka/: kcmkwallet.po  kwalletmanager.po
po/kk/: kcmkwallet.po  kwalletmanager.po
po/km/: kcmkwallet.po  kwalletmanager.po
po/ko/: kcmkwallet.po  kwalletmanager.po
po/lt/: kcmkwallet.po  kwalletmanager.po
po/lv/: kcmkwallet.po  kwalletmanager.po
po/mk/: kcmkwallet.po  kwalletmanager.po
po/mr/: kcmkwallet.po  kwalletmanager.po
po/ms/: kcmkwallet.po  kwalletmanager.po
po/nb/: kcmkwallet.po  kwalletmanager.po
po/nds/: kcmkwallet.po  kwalletmanager.po
po/ne/: kcmkwallet.po  kwalletmanager.po
po/nl/: kcmkwallet.po  kwalletmanager.po
po/nl/docs/kwalletmanager/: index.docbook
po/nn/: kcmkwallet.po  kwalletmanager.po
po/oc/: kcmkwallet.po  kwalletmanager.po
po/pa/: kcmkwallet.po  kwalletmanager.po
po/pl/: kcmkwallet.po  kwalletmanager.po
po/pt/: kcmkwallet.po  kwalletmanager.po
po/pt_BR/: kcmkwallet.po  kwalletmanager.po
po/pt_BR/docs/kwalletmanager/: index.docbook
po/ro/: kcmkwallet.po  kwalletmanager.po
po/ru/: kcmkwallet.po  kwalletmanager.po
po/sa/: kcmkwallet.po  kwalletmanager.po
po/se/: kcmkwallet.po  kwalletmanager.po
po/si/: kcmkwallet.po  kwalletmanager.po
po/sk/: kcmkwallet.po  kwalletmanager.po
po/sl/: kcmkwallet.po  kwalletmanager.po
po/sq/: kcmkwallet.po  kwalletmanager.po
po/sr/: kcmkwallet.po  kwalletmanager.po
po/sr@ijekavian/: kcmkwallet.po  kwalletmanager.po
po/sr@ijekavianlatin/: kcmkwallet.po  kwalletmanager.po
po/sr@latin/: kcmkwallet.po  kwalletmanager.po
po/sv/: kcmkwallet.po  kwalletmanager.po
po/ta/: kcmkwallet.po  kwalletmanager.po
po/tg/: kcmkwallet.po  kwalletmanager.po
po/th/: kcmkwallet.po  kwalletmanager.po
po/tr/: kcmkwallet.po  kwalletmanager.po
po/ug/: kcmkwallet.po  kwalletmanager.po
po/uk/: kcmkwallet.po  kwalletmanager.po
po/uz/: kcmkwallet.po  kwalletmanager.po
po/uz@cyrillic/: kcmkwallet.po  kwalletmanager.po
po/vi/: kcmkwallet.po  kwalletmanager.po
po/zh_CN/: kcmkwallet.po  kwalletmanager.po
po/zh_TW/: kcmkwallet.po  kwalletmanager.po
src/: CMakeLists.txt
src/konfigurator/: CMakeLists.txt  Messages.sh  konfigurator.cpp  konfigurator.h  kwallet.actions  kwalletconfig.desktop  kwalletconfig.json  kwalletconfig5.desktop  kwalletmanager5_show.desktop  kwalletmanager_show.desktop  savehelper.cpp  savehelper.h  walletconfigwidget.ui
src/manager/: CMakeLists.txt  Messages.sh  allyourbase.cpp  allyourbase.h  applicationsmanager.cpp  applicationsmanager.h  applicationsmanager.ui  authorizedapplicationstable.cpp  authorizedapplicationstable.h  authorizedappmodel.cpp  authorizedappmodel.h  clipboardutils.cpp  clipboardutils.h  connectedapplicationstable.cpp  connectedapplicationstable.h  connectedappmodel.cpp  connectedappmodel.h  disconnectappbutton.cpp  disconnectappbutton.h  kbetterthankdialogbase.cpp  kbetterthankdialogbase.h  kbetterthankdialogbase.ui  kwalletconfig5.desktop  kwalleteditor.cpp  kwalleteditor.h  kwalletmanager.cpp  kwalletmanager.h  kwalletmanager.qrc  kwalletmanager.rc  kwalletmanager5_show.desktop  kwalletmanagerwidget.cpp  kwalletmanagerwidget.h  kwalletmanagerwidgetitem.cpp  kwalletmanagerwidgetitem.h  kwalletpopup.cpp  kwalletpopup.h  kwhexview.cpp  kwhexview.h  kwmapeditor.cpp  kwmapeditor.h  (+13 more)
src/manager/icons/: CMakeLists.txt
(+6 files in other folders)
