



########### install files ###############

install( FILES   DESTINATION ${DATA_INSTALL_DIR}/kwalletmanager/icons)

kde4_install_icons( ${ICON_INSTALL_DIR}  hicolor )




#original Makefile.am contents follow:

#KDE_ICON = kwalletmanager
#
#pics_ICON = AUTO
#picsdir = $(kde_datadir)/kwalletmanager/icons
#
